# Borg-Directory

./: .coverage  .dockerignore  .gitignore  AGENTS.md  AUDIT_METHODOLOGY.md  AUDIT_SYNTHESIS.md  BORG_EXPERIMENT_SPEC.md  BORG_MARKETING_UNIFIED.md  BORG_PRD_FINAL.md  BORG_TRACE_FORMAT_v1.md  CHANGELOG.md  CLASSIFIER_AUDIT.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  DEFI_EXPERIMENT_DESIGN.md  DIFFICULTY_DETECTOR.md  Dockerfile  EXPERIMENT_FINAL_DESIGN.md  EXPERIMENT_FINAL_REPORT_V2.md  EXPERIMENT_PICKUP.md  EXPERIMENT_REPORT.md  EXPERIMENT_V2_DESIGN.md  EXPERIMENT_V2_STATUS.md  EXPERIMENT_V3_SPEC.md  FINAL_EXPERIMENT_REPORT.md  GAP_ANALYSIS.md  GO_NO_GO_DECISION.md  LICENSE  LOAD_TEST_REPORT_10.md  LOAD_TEST_REPORT_100.md  LOAD_TEST_REPORT_1000.md  MARKETING.html  MARKETING.md  PACK_AUDIT_RESULTS.md  PHASE_0_NOTES.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  (+100 more)
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md
agent_borg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
autoresearch/: AUTORESEARCH_CONFIG.md  trace_config.json
benchmarks/: README.md  runner.py
borg/: __init__.py  cli.py
docker/: Dockerfile.borg
docs/: 20260409-1115_borg_100user_test_plan.md  20260422-0909_NEW_HOME_PRODUCTION_CLOSURE.md  20260422-1017_BORG_TELEGRAM_COMMS_TLDR.md  20260423-1023_BORG_DISTRIBUTION_CLOSURE.md  20260423-1122_EXTERNAL_CHANNEL_UAT_CLOSURE.md  20260423-1140_FINAL_SHARE_CLOSURE.md  20260423-1333_CLAUDE_CLI_TELEGRAM_UAT_CLOSURE.md  20260423-144345_test-proof.md  20260423-1448_onboarding-distribution-readiness-spec.md  20260423-1450_readiness-verdict.md  20260423-1450_test-proof.md  20260423-1500_green-check-r1.md  20260423-150401_github-cutover-closure-proof.md  20260423-1518_cli-green-proof-r3.md  20260423-1540_claude-onboarding-deep-review.md  20260423-1635_onboarding-proof.md  20260503_BORG_PRIVACY_SAFE_COLLECTIVE_INTELLIGENCE_READINESS.md  20260504-0635_BORG_CURRENT_STATE_AND_OUTSTANDING_DEEP_DIVE.md  20260504-1123_BORG_PRODUCTION_1000_READINESS_STATUS.md  20260505-0700_BORG_DAY_ONE_FIRST_USER_READINESS.md  20260505-0700_day_one_automated_rescue.md  20260513_BORG_DEEP_CUTOVER_EXECUTION_BOARD.md  20260513_BORG_FULL_AUDIT_AND_OBSERVE_CONFIDENCE_GATE.md  20260513_BORG_MULTI_REPO_PRODUCTION_CLEANUP_CUTOVER_PROPOSAL.md  20260514_APPROVED_DO_IT_ALL_FINAL_STATUS.md  20260514_BORG_EMBEDDINGS_SCHEMA_COMPAT_VERIFICATION_RAW.md  20260514_BORG_GOOGLE_TIER_READINESS_CONTINUATION.md  20260514_BORG_PRODUCTION_REBUILD_MASTER_PLAN.md  20260514_BORG_PUBLIC_LAUNCH_BLOCKER_BOARD.md  20260514_BORG_PUBLIC_LAUNCH_IMPLEMENTATION_REPORT.md  20260514_BORG_PUBLIC_LAUNCH_READINESS_PLAN.md  20260514_BORG_RELEASE_BRANCH_CLEANUP_RUNBOOK.md  20260514_BORG_RUNTIME_FINGERPRINT_CANARY_PROOF.md  20260514_BORG_RUNTIME_FINGERPRINT_VERIFICATION_RAW.md  20260514_BORG_WORLD_CLASS_HARDENING_BOARD.md  20260514_FIRST_10_USER_INVITE_PACKET.md  20260514_FIX_ALL_PUBLIC_LAUNCH_BLOCKERS_REPORT.md  20260514_PUBLIC_SELF_SERVE_LAUNCH_CLOSURE_PLAN.md  20260515_BORG_FINAL_PRODUCTION_HARDENING_REPORT.md  20260515_BORG_LEARNING_LOOP_FIX_REPORT.md  (+132 more)
dogfood/: 01_vps_setup.sh  02_task_runner.sh.bak  04_daily_dashboard.sh  EXPERIMENT_V3_REDESIGN.md  REAL_FAILURE_ANALYSIS.md  agent_trace_experiment.py  analyze_swebench.py  apply_test_patch.sh  batch_results.json  borg_dogfood.py  build_expansion_images.py  build_missing_images.py  calibration_run2.json  check_mcp.py  check_patch.sh  check_patches.py  check_specific_test.sh  check_swebench.py  crossmodel_results.json  difficulty_detector.py  exp_batch2.json  experiment_data_actual.json  experiment_executor.py  experiment_results.json  experiment_tasks.json  explore_hints.py  firstuser_audit.md  get_test_patch.py  load_swebench.py  phase1_concurrency.py  phase2_analyze.py  phase2_select_tasks.py  phase2_setup_workspace.py  phase2_task_manifest.json  phase_a_log.jsonl  phase_a_seeder.py  phase_b_analyze.py  phase_b_runner.py  pilot_manifest.json  pre_verification.py  (+25 more)
eval/: 20260423_claude_cli_telegram_uat_report.json  20260423_external_channel_uat_report.json  20260423_fix_validation_summary.json  20260423_git_closure_proof.txt  20260423_legacy_home_owner_view.stderr  20260423_live_dashboard_publish_proof.txt  20260423_post_closure_git_status.txt  20260423_public_dashboard_branch_commit.txt  20260423_share_readiness_final.json  20260423_share_release_proof.txt  20260423_share_release_proof_round2.txt  20260514_approved_do_it_all.json  20260514_borg_google_tier_readiness_continuation.json  20260514_borg_public_launch_command_log.json  20260514_borg_public_launch_outstanding_blockers.json  20260514_borg_public_launch_readiness.json  20260514_fix_all_public_launch_blockers.json  20260514_public_self_serve_launch_closure_plan.json  20260515_benchmark_evidence_audit.json  20260515_final_production_hardening_commands.json  20260515_final_production_hardening_report.json  20260515_learning_loop_fix_report.json  20260515_production_closure_gate_raw.json  20260515_production_closure_gate_rerun_raw.json  20260515_value_latency_smoke.json  20260515_whole_codebase_day_one_audit.json  20260515_whole_codebase_day_one_audit_commands.json  (+101 more)
(+1601 files in other folders)
