[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-borg"
version = "3.3.6"
description = "Collective memory MCP server for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Borg contributors" }
]
keywords = ["mcp", "ai-agents", "debugging", "agent-tools", "collective-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/borg-farther/Borg-Directory"
Repository = "https://github.com/borg-farther/Borg-Directory"
Documentation = "https://github.com/borg-farther/Borg-Directory#readme"
Issues = "https://github.com/borg-farther/Borg-Directory/issues"

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
]
embeddings = [
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
]
crypto = [
  "pynacl>=1.5.0",
]
dev = [
  "pytest>=8.0.0",
  "tomli>=2.0.0; python_version<'3.11'",
]
all = [
  "pytest>=8.0.0",
  "tomli>=2.0.0; python_version<'3.11'",
  "sentence-transformers>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "pynacl>=1.5.0",
]

[project.scripts]
borg = "borg.cli:main"
borg-mcp = "borg.integrations.mcp_server:main"
borg-doctor = "borg.cli.doctor:run_doctor"
borg-install = "borg.cli.install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["borg*"]

[tool.setuptools.package-data]
borg = ["seeds_data/*.yaml", "seeds_data/*.json", "seeds_data/*.md", "seeds_data/*/*.yaml", "seeds_data/*/*.json", "seeds_data/*/*.md", "seeds_data/packs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["docs", "build", "dist", ".git", ".pytest_cache", "*.egg-info"]
markers = [
    "network: tests that mock or exercise network-style pack retrieval paths",
]
